--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 
                       
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-5" href="#!"><i class="fab fa-twitter fa-4x"></i></a>
-                    <a class="mx-5" href="#!"><i class="fab fa-discord fa-4x"></i></a>
+                    <a class="mx-5" href="https://twitter.com/VoxHoundz"><i class="fab fa-twitter fa-4x"></i></a>
+                    <a class="mx-5" href="https://discord.gg/QEGw4sudAB"><i class="fab fa-discord fa-4x"></i></a>
                 </div>
             </div>
         </section>
