--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                             <h4>Mint</h4>
                                             <p class="text-black-75  mb-0">
                                                 <br> Mint VoxHoundz with the button below <br>
-                                                <br> All VoxHoundz are .08 Ξ each<br>
+                                                <br> All VoxHoundz are Ξ .08 each<br>
                                                 <br>
                                                 <br>
 
