--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
               <div id="web3-component">
                 <p class="text-black-75 mb-0">
                   <br />
-                  Mint your VoxHoundz here <br />
+                  Mint your VoxHoundz below! <br />
                   <br />
-                  All VoxHoundz are Ξ.08 each<br />
+                  All VoxHoundz are Ξ.08 each.<br />
                   <br />
                   <br />
                 </p>
