addition of roadmap image

--- a/index.html
+++ b/index.html
@@ -151,10 +151,7 @@
                 ><br />
                 <br />
                 You don’t, all Houndz need love, right? Each VoxHound will be
-                hidden until purchased. The VoxHound that you receive will be
-                completely random. This is to avoid whales adopting all of the
-                rarest ones early on. We believe every collector should have a
-                fair chance to receive a rare hound.<br />
+                hidden until the end of the day. This is done to keep others from knowing which houndz are going to be minted next, giving them an unfair advantage.<br />
                 <br /><strong>What are the “Trophy” houndz?</strong><br />
                 There are 3 VoxHoundz in total who are carrying a trophy on
                 their back. If you own all 3 trophy VoxHoundz you are able to
@@ -170,24 +167,12 @@
         <!-- Project One Row-->
         <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
           <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="4827.png" alt="..." />
+            <img src="voxhoundz roadmap.png" alt="" class="center">
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>Roadmap</h4>
+              <h4></h4>
               <p class="text-black-75 mb-0">
-                <br />
-                25% Sold: Discord giveaways are enabled.<br />
-                <br />
-                50% Sold: We focus on establishing partnerships within the
-                Metaverse. <br />
-                <br />
-                75% Sold: VoxHound merchandise and accessories that can only be
-                purchased by owners. <br />
-                <br />
-                100% Sold: Further expanding of the VoxHound brand and exclusive
-                perks for owners that will be revealed in the future.<br />
-              </p>
             </div>
           </div>
           <a name="Buy"></a>
@@ -207,7 +192,7 @@
               <div id="web3-component">
                 <p class="text-black-75 mb-0">
                   <br />
-                  Mint your VoxHoundz below! <br />
+                  Mint your VoxHoundz below! They will be revealed at the end of each day! <br />
                   <br />
                   All VoxHoundz are Ξ.08 each.<br />
                   <br />
